Drop the (mostly) unused github account

--- a/{{cookiecutter.project_slug}}/{{ cookiecutter.main_file }}.org
+++ b/{{cookiecutter.project_slug}}/{{ cookiecutter.main_file }}.org
@@ -35,7 +35,7 @@ Dan Čermák
 @@html: <tr></tr>@@
 @@html: <tr></tr>@@
 @@html: <tr><td><i class="fa-solid fa-globe"></i></td><td> <a href="https://dancermak.name/">https://dancermak.name</a></td></tr>@@
-@@html: <tr><td><i class="fab fa-github"></i></td><td> <a href="https://github.com/dcermak/">dcermak</a> / <a href="https://github.com/D4N/">D4N</a></td></tr>@@
+@@html: <tr><td><i class="fab fa-github"></i></td><td> <a href="https://github.com/dcermak/">dcermak</a></td></tr>@@
 @@html: <tr><td><i class="fab fa-mastodon"></i></td><td> <a href="https://mastodon.social/@Defolos">@Defolos@mastodon.social</a></td></tr>@@
 @@html: </table>@@
 @@html: </div>@@
