prefer my private email address

--- a/{{cookiecutter.project_slug}}/{{ cookiecutter.main_file }}.org
+++ b/{{cookiecutter.project_slug}}/{{ cookiecutter.main_file }}.org
@@ -1,7 +1,7 @@
 # -*- org-confirm-babel-evaluate: nil; -*-
 #+AUTHOR: Dan Čermák
 #+DATE: 
-#+EMAIL: dcermak@suse.com
+#+EMAIL: dan.cermak@posteo.net
 #+TITLE: {{ cookiecutter.presentation_title }}
 # #+SUBTITLE: Testing Container Images with Python and Pytest
 
